# piconbiere

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
src/: client.rs  episode.rs  fs.rs  lib.rs  main.rs  media.rs  page.rs  selectors.rs  serie.rs  termio.rs
src/models/: mod.rs  serie.rs  viewer.rs
